# fmu-ensemble

./: .buildinfo  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  advancedusage.html  authors.html  concepts.html  contributing.html  docs_requirements.txt  fmu.ensemble.html  fmu.ensemble.util.html  fmu.html  genindex.html  history.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  test_requirements.txt  usage.html
.github/: dependabot.yml
.github/workflows/: codecov.yml  codeql.yml  fmu-ensemble.yml  style.yml
_modules/: index.html  logging.html
_modules/fmu/ensemble/: ensemble.html  ensemblecombination.html  ensembleset.html  etc.html  observations.html  realization.html  realizationcombination.html  util.html  virtualensemble.html  virtualrealization.html
_modules/fmu/ensemble/util/: dates.html  rates.html
_sources/: advancedusage.rst.txt  fmu.ensemble.rst.txt  fmu.ensemble.util.rst.txt  fmu.rst.txt  index.rst.txt  modules.rst.txt  usage.rst.txt
_static/: documentation_options.js
ci/: testkomodo.sh
docs/: advancedusage.rst  concepts.rst  conf.py  examples_troll.rst  index.rst  installation.rst  make.bat  usage.rst
docs/_templates/: layout.html
docs/examples/: apply_real_example.csv
src/fmu/: __init__.py
src/fmu/ensemble/: __init__.py  _theversion.py  _version.py  azureensemble.py  common.py  delta.py  ensemble.py  ensemblecombination.py  ensembleset.py  etc.py  observation_parser.py  observations.py  operations.py  realization.py  realizationcombination.py  realizationmismatch.py  surface.py  util.py  virtualensemble.py  virtualrealization.py
src/fmu/ensemble/util/: __init__.py  dates.py  rates.py
tests/: .gitignore  ert-runpath-file  test_azureensemble.py  test_batch.py  test_dates.py  test_ecl2df.py  test_ensemble.py  test_ensemble_agg.py  test_ensemble_eclfail.py  test_ensemblecombination.py  test_ensembleset.py  test_etc.py  test_observations.py  test_operations.py  test_realization.py  test_realizationcombination.py  test_res2df.py  test_rmrc.py  test_surface.py  test_util.py  test_virtual_ensemble.py  test_virtualensemble.py  test_virtualrealization.py  test_webviz_subsurface_testdata.py  tests_ensemblecombination.py
tests/data/: README.md  ert-runpath-file
tests/data/testensemble-reek001/realization-0/iter-0/: JOB_LOG  STATUS  jobs.json  jobs.py  outputs.txt  parameters.txt
tests/data/testensemble-reek001/realization-0/iter-0/eclipse/include/grid/: reek.grid  reek.perm  reek.poro
tests/data/testensemble-reek001/realization-0/iter-0/eclipse/include/props/: reek.pvt  reek.swatinit  sgof.txt  swof.inc
tests/data/testensemble-reek001/realization-0/iter-0/eclipse/include/regions/: reek.eqlnum  reek.fipnum
tests/data/testensemble-reek001/realization-0/iter-0/eclipse/model/: 2_R001_REEK-0.DATA
tests/data/testensemble-reek001/realization-1/iter-0/: JOB_LOG  OK  STATUS  jobs.json  jobs.py  outputs.txt  parameters.txt
tests/data/testensemble-reek001/realization-1/iter-0/eclipse/model/: 2_R001_REEK-1.SMSPEC  2_R001_REEK-1.UNSMRY-failed2000
tests/data/testensemble-reek001/realization-2/iter-0/: JOB_LOG  STATUS  jobs.json  jobs.py  outputs.txt  parameters.txt
tests/data/testensemble-reek001/realization-2/iter-0/eclipse/model/: 2_R001_REEK-2.SMSPEC
tests/data/testensemble-reek001/realization-3/iter-0/: JOB_LOG  STATUS  jobs.json  jobs.py  outputs.txt  parameters.txt
tests/data/testensemble-reek001/realization-3/iter-0/eclipse/model/: 2_R001_REEK-3.SMSPEC
tests/data/testensemble-reek001/realization-4/iter-0/: JOB_LOG  STATUS  jobs.json  jobs.py  parameters.txt
tests/data/testensemble-reek001/realization-4/iter-0/eclipse/model/: 2_R001_REEK-4.DATA  2_R001_REEK-4.SMSPEC
tests/data/testensemble-reek001/realization-4/iter-0/share/results/: coviz_config.txt
tests/data/testensemble-reek001/share/input/observations/: reek_observations.yaml
tests/data/testensemble-reek001/share/observations/: obs2.yml  observations.yaml  observations.yml
(+15 files in other folders)
