[build-system]
requires = ["setuptools>65", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fmu-ensemble"
authors = [
    {name = "Håvard Berland", email = "havb@equinor.com"},
]
description = "Python API to ensembles produced by ERT"
requires-python = ">= 3.8"
readme = "README.rst"
license = {text = "GPL-3.0"}
keywords = ["fmu", "ensemble"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
dependencies = [
    "resdata >= 4.0.0",
    "numpy",
    "pandas",
    "pyyaml >= 5.1",
]

[project.urls]
Repository = "https://github.com/equinor/fmu-ensemble"

[project.optional-dependencies]
test = [
    "pytest>=2.9.2",
    "pytest-cov",
]
docs = [
    "ipython",
    "rstcheck",
    "sphinx",
    "sphinx-argparse",
    "sphinx_rtd_theme",
]
style = [
    "pre-commit",
]
parquet = [
    "pyarrow",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/fmu/ensemble/version.py"

[tool.rstcheck]
ignore_directives = ["argparse", "automodule"]
# This looks like a bug in rstcheck:
ignore_messages = "Hyperlink target .* is not referenced"

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = [
  "W",  # pycodestyle
  "I",  # isort
  "B",  # flake-8-bugbear
  "SIM",  # flake-8-simplify
  "F",  # pyflakes
  "PL",  # pylint
  "NPY",  # numpy specific rules
  "C4",  # flake8-comprehensions
]
ignore = ["PLW2901",  # redefined-loop-name
          "PLR2004",  # magic-value-comparison
          "PLR0915",  # too-many-statements
          "PLR0912",  # too-many-branches
          "PLR0911",  # too-many-return-statements
          "PLC2701",  # import-private-name
          "PLR6201",  # literal-membership
          "PLR0914",  # too-many-locals
          "PLR6301",  # no-self-use
          "PLW1641",  # eq-without-hash
          "PLR0904",  # too-many-public-methods
          "PLR1702",  # too-many-nested-blocks
          "PLW3201",  # bad-dunder-method-name
          "B028",  # no-explicit-stacklevel
          "SIM118",  # in-dict-keys
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
"PLW0603" # global-statement
]

[tool.ruff.lint.pylint]
max-args = 20
